# CubeMInd

./: README.md
backend/: app.py  vision.py
backend/solver/: CMakeLists.txt  kociemba.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Controls.jsx  Cube.jsx  Scanner.jsx
